2007-01-16  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (libdfsch_la_SOURCES): reflect rename of object.h to
	types.h

	* src/hash.c (dfsch_hash_unset): lower bound on hash table size

	* src/native.c (native_get_type): handle the empty list case

	* src/dfsch.c (type_write): It's not good idea to reuse same buffer
	for two sucessive calls of sl_append()

	* src/native.c (native_get_type): inspect type of given object
	(probably useless for now)

	* lib/load.c (dfsch_read_scm_stream): streams are closed by
	fclose(3) not close(2)
	(dfsch_read_scm_fd/_stream): dont close anything (it's
	responsibility of caller) 

	* dfsch/dfsch.h (dfsch_type_t): more or less first-class types

2007-01-15  Ales Hakl  <ales at hakl dot net>

	* src/types.h: renamed from object.h

	* dfsch/wrapper.h, dfsch/strings.h: added extern "C" for C++

	* src/parse.c (dispatch_string): unicode escapes

	* src/strings.c (escape_table): excape NUL as \x00 and not \0

	* src/parse.c (dispatch_string): simplified hex byte-escape handling
	(dispatch_string): full octal escapes

2007-01-14  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (string_write): removed redundant hexadecimal table.

2007-01-03  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm (test): use when form

2006-12-31  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: Structured tests

	* src/repl.c: write function

2006-12-08  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_try): finally support

2006-11-24  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (parse_close): check that given state is valid for
	close paren.

2006-11-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_make_symbol): moved symbol table initialization 
	here.
	(gsh_check_init): removed locking and other unnecessary code
	(dfsch_eval_impl): propagate thread_info_t when recursing to self
	(eval_list): use dfsch_eval_impl instead of dfsch_eval
	(dfsch_eval_impl): propagate thread_info to eval_list
