@@ -1,3 +1,10 @@
+2007-01-20  Ales Hakl  <ales at hakl dot net>
+
+	* src/object.c: object system
+
+	* src/native.c (native_object_2_string): same signature as write
+	method for wrappers
+
 2007-01-16  Ales Hakl  <ales at hakl dot net>
 
 	* Makefile.am (libdfsch_la_SOURCES): reflect rename of object.h to
